Motion Path on proxy armature invalidates drivers, eventually segfaults. #70919

Closed
opened 2019-10-18 12:21:54 +02:00 by Demeter Dzadik · 3 comments
Member

System Information
Operating system: Linux-5.0.0-21-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.34

Blender Version
Broken: version: 2.82 959b40c2a8
Worked: We believe this did not happen about a week ago, although I haven't tested.

Short description of error
We have custom properties stored on a bone drive the visibility of some meshes. When the rig is linked and proxied, and motion paths are calculated, these drivers stop working. After changing the custom properties a few times, blender segfaults.

Exact steps for others to reproduce the error
motion_path_proxy_custom_property_driver_hide_crash.blend

  • Download attached file.
  • In a fresh file, link the Collection.
  • Make proxy of Armature.
  • Note that Bone has a custom property "prop", which is hooked up to the Cube's visibility, and it works.
  • Place some keyframes on the bone and calculate motion path.
  • Note that the custom property no longer works to hide the cube.
  • If you toggle the now non-functioning custom property a few times, blender crashes. This maybe only happens if you put down some more keyframes after calculating motion path.

Video:
video-2019-10-18_12.17.57.mp4

**System Information** Operating system: Linux-5.0.0-21-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.34 **Blender Version** Broken: version: 2.82 959b40c2a8 Worked: We believe this did not happen about a week ago, although I haven't tested. **Short description of error** We have custom properties stored on a bone drive the visibility of some meshes. When the rig is linked and proxied, and motion paths are calculated, these drivers stop working. After changing the custom properties a few times, blender segfaults. **Exact steps for others to reproduce the error** [motion_path_proxy_custom_property_driver_hide_crash.blend](https://archive.blender.org/developer/F7833720/motion_path_proxy_custom_property_driver_hide_crash.blend) - Download attached file. - In a fresh file, link the Collection. - Make proxy of Armature. - Note that Bone has a custom property "prop", which is hooked up to the Cube's visibility, and it works. - Place some keyframes on the bone and calculate motion path. - Note that the custom property no longer works to hide the cube. - If you toggle the now non-functioning custom property a few times, blender crashes. This maybe only happens if you put down some more keyframes after calculating motion path. Video: [video-2019-10-18_12.17.57.mp4](https://archive.blender.org/developer/F7833736/video-2019-10-18_12.17.57.mp4)
Author
Member

Added subscriber: @Mets

Added subscriber: @Mets
Sergey Sharybin self-assigned this 2019-10-18 13:03:53 +02:00

This issue was referenced by 6183688c35

This issue was referenced by 6183688c3560100dc1dcce3354cb622a135bc275

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70919
No description provided.